commit updated build file